fixed alignment of split-image list

--- a/front-end/src/public/css/howitworks.css
+++ b/front-end/src/public/css/howitworks.css
@@ -192,4 +192,7 @@
 	.salary-by-year div:first-child {
 		flex: 1 0 100%;
 	}
+	#curriculum-section {
+		padding: 0;
+	}
 }
